--- a/RotatingFeatures-main/codebase/config/experiment/KITTI.yaml
+++ b/RotatingFeatures-main/codebase/config/experiment/KITTI.yaml
@@ -1,13 +1,13 @@
 # @package _global_
 
 input:
-  dataset: 1
+  dataset: 4
 
-  load_path: datasets/FoodSeg103/Images/
+  load_path: datasets/KITTI/
 
-  num_objects_per_img: 4
+  num_objects_per_img: 10
 
-  image_size: [ 14, 14 ]  # Shape corresponds to output feature map size of DINO model.
+  image_size: [ 14, 14 ]  #  Shape corresponds to output feature map size of DINO model.
   channel: 768
 
   dino_processed: True
@@ -23,9 +23,9 @@ model:
 
 
 training:
-  steps: 30000  # How many times do we train on a single batch?
+  steps: 30000 # How many times do we train on a single batch? 
   weight_decay: 1e-6
-
+  print_idx: 10
 
 evaluation:
   mask_overlap: 0  # If 1: Mask overlapping object areas while clustering orientations.
