upload file of Different cluster, and revert config files to original ones

--- a/Different cluster/4Shapes.yaml
+++ b/Different cluster/4Shapes.yaml
@@ -25,3 +25,4 @@ training:
 
 evaluation:
   mask_overlap: 1  # If 1: Mask overlapping object areas while clustering orientations.
+  bKeans: 0  # 1: use kmean, 0 use dbscan
